--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <title>Comentario de ingenieria</title>
     <style type="text/css">
         /* CSS o estilo */
+          body::-webkit-scrollbar {
+            width: 8px;
+        }
+        body::-webkit-scrollbar-track {
+            background: white;
+        }
+
+        body::-webkit-scrollbar-thumb {
+            background-color: rgba(01, 25, 68, 0.85);;
+            border-radius: 10px;
+            border: 1px solid rgba(1, 17, 48, 0.966);
+        }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 14px;
