--- a/index.html
+++ b/index.html
@@ -106,14 +106,17 @@
         <p>
             En este texto podemos encontrar un pequeño vistazo de la web enfocándonos en el marketing que gira y se
             desarrollo en torno a esta y como <mark>los cambios en la web</mark> también han permitido adaptar al
-            marketing a lo que conocemos ahora como el marketing digital y el marketing 4.0.
+            marketing a lo que conocemos ahora como el marketing digital y el marketing 4.0, abarcando como antes las personas 
+            no solían usar metodos digitales para comprar y vender por temas de desconfianza y como ahora es indispensable 
+            mantener tu negocio en una plataforma digital.
             <br> La forma como se ha <mark>fusionado</mark> el marketing con los entornos digitales ha dado paso a
             nuevas formas de relación entre empresa-consumidor como lo dice Philip Kotler en su libro Marketing 4.0 este
             a su vez nos ilustra como las propagandas en pancartas y en television ya no son tan efectivas como antes
             [1] mostrandonos así como gracias a la web la forma de comprar y vender ha cambiado, teniendo una conexión
             más directa con el comprador y llevando a esta a ser una economia impulsada por el valor (Value Driven),
-            todo esto dando una mejor experiencia al comprador y mejores resultados al vendedor, permitiendo expandir la
-            economia (esto se ve representado en un crecimiento de más del 20% en el PIB a <mark>nivel mundial</mark> ).
+            todo esto dando una mejor experiencia al comprador y a su vez mejores resultados al vendedor, hecho que 
+            esta permitiendo una expansión en la
+            economia mundial (esto se ve representado en un crecimiento de más del 20% en el PIB a <mark>nivel mundial</mark> ).
             [2]
         </p>
     </section>
@@ -127,9 +130,10 @@
                 digitales?"</mark> <br> En principio la respuesta mas objetiva a esto es el crecimiento en los
             indicadores de la economia global como se puede observar en el estudio “Digital disruption: The growth
             multiplier” [4] esto es posible a la gran apertura laboral que el marketing digital ha ofrecido, ademas de
-            que se le ha facilitado las labores al consumidor ya que se instaura una economia mas centrada en este. <br>
-            Este marketing ya se encuentra instaurado casi en todas las organizaciones que pretenden ofrecer un producto
-            o servicio, lo que ha mejorado nuestra manera de encontrar lo que necesitamos, ahora no tenemos la necesidad
+            que se le ha facilitado las labores al consumidor ya que se instaura una economia mas centrada en este, hecho
+            que ha logrado mejorar la fiabilidad del consumidor hacía los vendedores. <br>
+            Actualmente este tipo de marketing ya se encuentra instaurado casi en todas las organizaciones que pretenden ofrecer un producto
+            o servicio, lo que ha mejorado nuestra manera de encontrar lo que necesitamos y de ofrecer lo que vendemos, ahora no tenemos la necesidad
             de salir de nuestro hogar para abastecernos de cualquier elemento que necesitemos, ha aumentado el
             <mark>confort</mark> en nuestras vidas y a su vez se ha mejorado la calidad de esta.
         </p>
