--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             En este texto podemos encontrar un pequeño vistazo de la web enfocándonos en el marketing que gira y se
             desarrollo en torno a esta y como <mark>los cambios en la web</mark> también han permitido adaptar al
             marketing a lo que conocemos ahora como el marketing digital y el marketing 4.0, abarcando como antes las personas 
-            no solían usar metodos digitales para comprar y vender por temas de desconfianza y como ahora es indispensable 
+            no solían usar metodos digitales para comprar y vender por temas de desconfianza y, como ahora es indispensable 
             mantener tu negocio en una plataforma digital.
             <br> La forma como se ha <mark>fusionado</mark> el marketing con los entornos digitales ha dado paso a
             nuevas formas de relación entre empresa-consumidor como lo dice Philip Kotler en su libro Marketing 4.0 este
@@ -129,8 +129,10 @@
             surge la duda <mark>“¿Para qué nos sirve que el marketing ahora este presente en plataformas
                 digitales?"</mark> <br> En principio la respuesta mas objetiva a esto es el crecimiento en los
             indicadores de la economia global como se puede observar en el estudio “Digital disruption: The growth
-            multiplier” [4] esto es posible a la gran apertura laboral que el marketing digital ha ofrecido, ademas de
-            que se le ha facilitado las labores al consumidor ya que se instaura una economia mas centrada en este, hecho
+            multiplier” [4] esto es posible a la gran apertura laboral que el marketing digital ha ofrecido todo esto se 
+            ve reflejado en nuevos trabajos especializados en temas relacionados a este como lo puden ser la creación de 
+            paginas web, diseño de publicaciones además de
+            que se le han facilitado las labores al consumidor ya que se instaura una economia mas centrada en este, hecho
             que ha logrado mejorar la fiabilidad del consumidor hacía los vendedores. <br>
             Actualmente este tipo de marketing ya se encuentra instaurado casi en todas las organizaciones que pretenden ofrecer un producto
             o servicio, lo que ha mejorado nuestra manera de encontrar lo que necesitamos y de ofrecer lo que vendemos, ahora no tenemos la necesidad
