--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
             font-family: 'Times New Roman', Times, serif;
             margin: 0 0 10px 0;
         }
+        h3{ margin: 0 0 10px 0;
+        }
 
         mark {
             color: red;
